--- a/generic.html
+++ b/generic.html
@@ -56,48 +56,10 @@
 									<h3 class="major">About Me</h3>
 									<p>Hello! I'm Sahithi Alla. I'm from Novi, Michigan. I spent most of my childhood in India 
 									   then moved to the US in 7th grade. I like to connect with people and learn new things. During my free time,
-									   I like to take a walk outdoors, listening to music, or reading books.
+									   I like to take a walk outdoors, listening to music, or reading books. Currently, I'm a rising junior majoring in 
+									   Computer Engineering and minoring in Computational Mathematics, Science, and Engineering (CMSE). 
 									</p>
-
-									<p></p>
-									<h3 class="major">Vitae phasellus</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-
-								</div>
-							</div>
-
 					</section>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<ul class="contact">
-								<li class="icon solid fa-phone">(248) 567-9225</li>
-								<li class="icon solid fa-envelope"><a href="#">allanaga@msu.edu</a></li>
-								<li class="icon brands fa-instagram"><a href="#">https://www.instagram.com/sahithia4/</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
-
 			</div>
 
 		<!-- Scripts -->
